--- a/home/static/css/intellifind-ai.css
+++ b/home/static/css/intellifind-ai.css
@@ -4803,7 +4803,7 @@ figcaption {
   margin-bottom: 0;
   margin-left: -480px;
   padding-left: 105px;
-  font-size: 4rem;
+  font-size: 3rem;
   display: flex;
   position: static;
 }
@@ -6472,6 +6472,7 @@ figcaption {
   flex-wrap: wrap;
   padding: 20px;
   gap: 20px;
+  margin-bottom: 80px;
   /* background-image: linear-gradient(#1a1a1a, #1a1a1a); */
 }
 .card {
@@ -6797,7 +6798,7 @@ hr {
     left: 1rem;
     font-weight: 900;
     top: 1rem;
-}
+  }
 
   .intelliventory-tagline {
     font-size: 2rem;
@@ -6882,7 +6883,7 @@ hr {
   p {
     font-family: "Lato";
     font-size: 6px;
-}
+  }
 
   .icon-1x1-medium {
     border: 1px #000;
@@ -6897,7 +6898,7 @@ hr {
     height: 11rem;
     width: 90%;
     top: 32%;
-}
+  }
 
   .features-content-item.content-item-1 {
     border-width: 0;
@@ -6905,7 +6906,7 @@ hr {
     width: 90%;
     display: inline-block;
     top: 12%;
-}
+  }
 
   .header-subcontent.text-color-white {
     margin-left: -9px;
@@ -6917,7 +6918,7 @@ hr {
     flex-direction: column;
     position: relative;
     top: -1rem;
-}
+  }
 
   .features-content-item.content-item-3 {
     border-style: none;
@@ -7078,13 +7079,13 @@ hr {
     flex-direction: column;
     margin-top: -17px;
     align-items: start;
-}
-.invoicewhiz-features-content-left {
-  grid-area: content-left;
-  margin-top: 94px;
-  position: relative;
-  top: 30%;
-}
+  }
+  .invoicewhiz-features-content-left {
+    grid-area: content-left;
+    margin-top: 94px;
+    position: relative;
+    top: 30%;
+  }
 }
 
 /* banner css */
@@ -7127,10 +7128,11 @@ hr {
   font-size: 1.3rem;
   margin-bottom: 4rem;
   font-weight: bold;
-  padding: 0rem 6rem;
+  padding: 0rem 0rem;
   position: relative;
   font-family: "Lato";
   top: 3.5rem;
+  width: 100%;
 }
 
 #paragraph-2 {
@@ -7197,4 +7199,17 @@ hr {
   top: -4rem;
   font-weight: 900;
   left: 30rem;
+}
+
+h1.heading-4 {
+  width: 100%;
+  font-size: 3rem;
+  text-align: center; /* This aligns the text horizontally to the center */
+  background: linear-gradient(
+    to right,
+    #2eeddd,
+    #1dbfe3
+  ); /* Replace #2ee and #ddd with the desired colors */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
