--- a/home/static/css/intellifind-ai.css
+++ b/home/static/css/intellifind-ai.css
@@ -6505,7 +6505,7 @@ figcaption {
   min-height: 200px;
   border: 0px solid var(--border);
   border-radius: var(--border-radius-small-3);
-  text-align: justify;
+  text-align: center;
   /* background-image: linear-gradient(#1a1a1a, #1a1a1a); */
   width: 100%;
   padding: 1.8rem;
@@ -6527,7 +6527,7 @@ figcaption {
 .card p {
   line-height: 1.6;
   margin-bottom: 15px;
-  text-align: left;
+  text-align: justify;
   font-family: "Lato";
 }
 /* .learn-more {
