"Updated CSS styles for logo image, header subtitle, and heading elements, and made responsive adjustments for various screen sizes. Also, made minor changes to HTML templates for homepage."

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -113,7 +113,8 @@
                                         <div class="text-align-center">
                                             <h1 class="heading-3"><span class="hero-tittle-class">Intellifind.ai</span>
                                             </h1>
-                                            <h2 class="heading-3"><span class="header-subtitle">Your Data Your AI</span>
+                                            <h2 class="heading-3"><span class="header-subtitle">Your Data, Your
+                                                    AI</span>
                                             </h2>
                                             <div data-w-id="9ec08b96-1a94-30a2-69d8-7c316ea68387"
                                                 style="opacity:0;-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -227,7 +228,7 @@
                                             <h2>Generative AI</h2>
                                             <p>Leverage advanced Generative AI to effortlessly query, extract
                                                 insights, and transform intricate data sets into meaningful
-                                                interactions -making data exploration as intuitive as a conversation
+                                                interactions - making data exploration as intuitive as a conversation
                                                 with
                                                 a trusted advisor.</p>
                                             <!-- <p class="learn-more">Learn More ></p> -->
@@ -258,7 +259,7 @@
                                         <div class="card">
                                             <h2>Multiple file types</h2>
                                             <p>Easily manage a variety of data formats, including images and PDFs,
-                                                through our AI-enabled automation. Our platform cross- references data
+                                                through our AI-enabled automation. Our platform cross - references data
                                                 to ensure accuracy, allowing businesses to streamline operations with
                                                 minimal manual input. enhancing overall productivity.</p>
                                             <!-- <p class="learn-more">Learn More ></p> -->
