--- a/home/static/css/intellifind-ai.css
+++ b/home/static/css/intellifind-ai.css
@@ -4335,12 +4335,29 @@ figcaption {
   transform: scale(0.99);
 }
 
-.logo-image {
-  float: none;
-  margin-top: 0;
-  padding-left: 0;
-  display: block;
-  overflow: visible;
+@media (max-width: 768px) {
+  .logo-image {
+    margin-top: 15px;
+    padding-left: 10px; /* Add some padding for smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .logo-image {
+    margin-top: 20px;
+    padding-left: 5px;
+    position: relative;
+    left: 53px;
+  }
+}
+
+@media (max-width: 360px) {
+  .logo-image {
+    margin-top: 25px;
+    padding-left: 0; /* Remove padding for very small screens */
+    position: relative;
+    left: 53px;
+  }
 }
 
 .features-component {
@@ -4824,7 +4841,7 @@ figcaption {
   margin-top: 0;
   margin-bottom: 0;
   margin-left: -480px;
-  padding-left: 105px;
+  padding-left: 155px;
   font-size: 3rem;
   display: flex;
   position: static;
@@ -4834,10 +4851,39 @@ figcaption {
   filter: drop-shadow(0 2px 5px #2eeddd8a);
   mix-blend-mode: overlay;
   background-image: linear-gradient(#fff, #8e8e8e);
-  padding-left: 105px;
+  padding-left: 155px;
   display: flex;
 }
+@media (max-width: 1200px) {
+  .header-subtitle {
+    margin-left: -240px;
+    font-size: 2.5rem;
+  }
+}
 
+@media (max-width: 768px) {
+  .header-subtitle {
+    margin-left: -120px;
+    font-size: 2rem;
+    padding-left: 100px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 460px) {
+  .header-subtitle {
+    text-align: center;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(#fff, #8e8e8e);
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: -452px;
+    font-size: 2.2rem;
+    display: flex;
+    position: static;
+  }
+}
 .outer-circle-copy-3 {
   background-image: radial-gradient(
     circle,
@@ -5169,7 +5215,7 @@ figcaption {
     margin-right: -0.5rem;
     padding-bottom: 0;
     padding-right: 0;
-    display: flex;
+    display: none;
   }
 
   .menu-icon-line-top {
@@ -7231,6 +7277,42 @@ h1.heading-4 {
   left: -16rem;
   top: -4rem;
 }
+@media (max-width: 1200px) {
+  h1.heading-4 {
+    width: 60rem;
+    font-size: 4rem;
+    left: -12rem;
+    top: -3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  h1.heading-4 {
+    width: 40rem;
+    font-size: 3rem;
+    left: -8rem;
+    top: -2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  h1.heading-4 {
+    width: 30rem;
+    font-size: 1.5rem;
+    left: 0rem;
+    top: 5rem;
+    line-height: 52px;
+  }
+}
+
+@media (max-width: 360px) {
+  h1.heading-4 {
+    width: 20rem;
+    font-size: 2rem;
+    left: -2rem;
+    top: -0.5rem;
+  }
+}
 
 h1.heading-4 span {
   background: linear-gradient(to right, #2eeddd, #1dbfe3);
@@ -7239,6 +7321,44 @@ h1.heading-4 span {
   font-size: 5rem;
   font-weight: 900;
   font-family: "Lato";
+}
+
+h1.heading-4 span {
+  background: linear-gradient(to right, #2eeddd, #1dbfe3);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 5rem;
+  font-weight: 900;
+  font-family: "Lato";
+}
+
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  h1.heading-4 span {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 768px) {
+  h1.heading-4 span {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 480px) {
+  h1.heading-4 {
+    width: 30rem;
+    font-size: 1.5rem;
+    left: 0rem;
+    top: 2rem;
+    line-height: 52px;
+  }
+}
+
+@media (max-width: 360px) {
+  h1.heading-4 span {
+    font-size: 2rem;
+  }
 }
 
 .get-intelligent {
