--- a/home/static/css/intellifind-ai.css
+++ b/home/static/css/intellifind-ai.css
@@ -1081,6 +1081,23 @@ figcaption {
   margin-top: 0.25rem;
 }
 
+
+.d-flex-child-50 {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 20px;
+}
+
+.d-flex-child-50 > :first-child{
+  width: 40%;
+}
+
+.d-flex-child-50 > :last-child {
+  flex-grow: 1;
+  padding-right: 1rem;
+}
+
 .max-width-full {
   width: 100%;
   max-width: none;
@@ -1275,6 +1292,14 @@ figcaption {
   text-decoration: none;
   display: block;
 }
+.our-workspaces {
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(#2eeddd, #156cbb);
+  -webkit-background-clip: text;
+  background-clip: text;
+  font-weight: 900;
+  margin-top: 5rem;
+}
 
 .margin-bottom.margin-medium,
 .margin-bottom.margin-tiny,
@@ -1390,11 +1415,12 @@ figcaption {
 
 .heading-style-h1 {
   color: var(--white);
-  margin-left: 32px;
+  /* margin-left: 32px; */
   font-size: 4rem;
   line-height: 1.2;
   position: relative;
   /* left: 3rem; */
+  text-align: center;
 }
 .heading-style-h1-annual {
   color: var(--white);
@@ -1415,7 +1441,7 @@ figcaption {
 }
 
 .heading-style-h1.text-color-white-gradient {
-  margin-left: 24px;
+  /* margin-left: 24px; */
 }
 
 .form-checkbox-icon {
@@ -1553,7 +1579,7 @@ figcaption {
   width: 20rem;
   height: 2.6rem;
   margin-top: 0px;
-  margin-right: -35px;
+  /* margin-right: -35px; */
   /* margin-left: -151px; */
   padding: 0.25rem;
   font-size: 1.2rem;
@@ -2187,7 +2213,7 @@ figcaption {
   width: 100%;
   height: 100%;
   position: relative;
-  top: 5px;
+  /* top: 5px; */
   overflow: hidden;
 }
 
@@ -4480,6 +4506,10 @@ figcaption {
   top: 21%;
 }
 
+/* .content-item-invoice {
+  height: 313.54px;
+} */
+
 .layout-circle-1 {
   z-index: 0;
   background-image: linear-gradient(
@@ -4638,7 +4668,7 @@ figcaption {
 }
 
 .video-header-lightbox-image {
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .video-overlay-layer {
@@ -4673,7 +4703,7 @@ figcaption {
   display: flex;
   position: relative;
   overflow: hidden;
-  top: 3rem;
+  /* top: 3rem; */
 }
 
 .heading {
@@ -4715,7 +4745,7 @@ figcaption {
   background-image: linear-gradient(#fff 30%, #b5b5b5 70%);
   -webkit-background-clip: text;
   background-clip: text;
-  padding-left: 78px;
+  /* padding-left: 78px; */
   position: static;
 }
 
@@ -5484,7 +5514,7 @@ figcaption {
   }
 
   .video-header-lightbox-image {
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     height: 100%;
   }
@@ -6540,7 +6570,7 @@ figcaption {
   flex-wrap: wrap;
   padding: 20px;
   gap: 20px;
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   /* background-image: linear-gradient(#1a1a1a, #1a1a1a); */
 }
 .card {
@@ -6880,7 +6910,7 @@ hr {
     width: 18rem;
     height: 2.6rem;
     margin-top: 0px;
-    margin-right: -35px;
+    /* margin-right: -35px; */
     padding: 0.25rem;
   }
 
@@ -7255,10 +7285,11 @@ hr {
 #why-matter {
   font-size: 4rem;
   font-family: "Lato";
-  position: relative;
-  top: -13rem;
+  /* position: relative; */
+  /* top: -13rem; */
   font-weight: 900;
-  left: 27rem;
+  /* left: 27rem; */
+  text-align: center;
 }
 
 #why-we {
