--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -16,6 +16,7 @@
     <link href="/static/css/normalize.css" rel="stylesheet" type="text/css">
     <link href="/static/css/webflow.css" rel="stylesheet" type="text/css">
     <link href="/static/css/intellifind-ai.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/responsive-home.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <style>
         @media (min-width:992px) {
@@ -74,7 +75,8 @@
                                         <div class="dropdown">
                                             <a href="#workspaces" class="navbar-link w-nav-link">Workspaces</a>
                                             <div class="dropdown-content">
-                                                <a href="#knowledge-database" class="dropdown-item">Knowledge Database</a>
+                                                <a href="#knowledge-database" class="dropdown-item">Knowledge
+                                                    Database</a>
                                                 <a href="#know-our-inventory" class="dropdown-item">Inventory</a>
                                                 <a href="#know-our-invoice" class="dropdown-item">Invoice</a>
                                                 <a href="#" class="dropdown-item">Build Your Own Workspace</a>
@@ -105,7 +107,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div data-w-id="9ec08b96-1a94-30a2-69d8-7c316ea68382" class="container-large" id="your-data-yor-id">
+                        <div data-w-id="9ec08b96-1a94-30a2-69d8-7c316ea68382" class="container-large"
+                            id="your-data-yor-id">
                             <div class="padding-section-large">
                                 <div class="header-component">
                                     <div class="header-image-circle"></div>
@@ -113,8 +116,8 @@
                                         <div class="text-align-center">
                                             <h1 class="heading-3"><span class="hero-tittle-class">Intellifind.ai</span>
                                             </h1>
-                                            <h2 class="heading-3"><span class="header-subtitle">Your Data, Your
-                                                    AI</span>
+                                            <h2 class="header-subtitle">Your Data, Your
+                                                    AI
                                             </h2>
                                             <div data-w-id="9ec08b96-1a94-30a2-69d8-7c316ea68387"
                                                 style="opacity:0;-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -191,23 +194,33 @@
                                         Built with Learnings from</h1>
                                     <div class="banner-logos">
                                         <div class="banner-logo">
-                                            <img id="usc-logo" src="{% static 'images/usc logo white.svg' %}"
-                                                onmouseover="this.src='{% static 'images/usc-new.svg' %}'" 
-                                                alt="USC Logo" data-hover="{% static 'images/usc-new.svg' %}">
+                                            <img id="usc-logo" src="{% static 'images/usc logo white.png' %}" alt="USC Logo"
+                                                data-hover="{% static 'images/usc-new.png' %}">
                                         </div>
                                         <div class="banner-logo">
                                             <img id="mit-logo" src="{% static 'images/MIT.svg' %}" alt="MIT Logo"
-                                            onmouseover="this.src='{% static 'images/mit-color.svg' %}'"
                                                 data-hover="{% static 'images/mit-color.svg' %}">
                                         </div>
                                         <div class="banner-logo">
-                                            <img id="linkedin-logo" src="{% static 'images/linkedin.svg' %}"
-                                            onmouseover="this.src='{% static 'images/linkedin-color.svg' %}'"
-                                                alt="LinkedIn Logo"
+                                            <img id="linkedin-logo" src="{% static 'images/linkedin.svg' %}" alt="LinkedIn Logo"
                                                 data-hover="{% static 'images/linkedin-color.svg' %}">
                                         </div>
-
                                     </div>
+                                
+                                    <script>
+                                        document.querySelectorAll('.banner-logo img').forEach(img => {
+                                            const originalSrc = img.src;
+                                            const hoverSrc = img.getAttribute('data-hover');
+
+                                            img.addEventListener('mouseenter', () => {
+                                                img.src = hoverSrc;
+                                            });
+
+                                            img.addEventListener('mouseleave', () => {
+                                                img.src = originalSrc;
+                                            });
+                                        });
+                                    </script>
                                 </div>
 
 
@@ -216,7 +229,7 @@
                                     <div class="max-width-large" id="features">
                                         <div class="text-align-center">
                                             <h3 class="heading-5"><span class="tagline">Optimize your operations
-                                                    with</span><span class="text-color-gradient"> </span></h3>
+                                                    with</span>
                                             <h1 class="heading-6">Intellifind.ai</h1>
                                         </div>
                                     </div>
@@ -306,13 +319,15 @@
                 <h2 id="why-matter" class="margin-bottom margin-xxlarge">Why Intellifind Matters?</h2>
                 <div class="intellifind-matters"
                     style="background-color: #131314; color: white; padding: 20px 20px 0; display: flex; font-family: Arial, sans-serif; position: relative; width: 100%; justify-content: space-between; border-bottom: 2px solid #00b8d4;">
-                    <div style="flex: 1; border-right: 2px solid #00b8d4; padding-right: 20px; box-sizing: border-box; margin-left: 2rem;">
+                    <div
+                        style="flex: 1; border-right: 2px solid #00b8d4; padding-right: 20px; box-sizing: border-box; margin-left: 2rem;">
                         <div style="display: flex; align-items: center;">
                             <div style="margin-left: 15px;">
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Unstructured Data</div> -->
                                 <div class="d-flex-child-50">
                                     <div style="font-size: 8vw; color: #00b8d4; font-weight: bold;">90%</div>
-                                    <div style="font-size: 1.6vw; text-align: justify;">Unstructured Data: Most data is unstructured, making it difficult to
+                                    <div style="font-size: 1.6vw; text-align: justify;">Unstructured Data: Most data is
+                                        unstructured, making it difficult to
                                         analyze.</div>
                                 </div>
                             </div>
@@ -324,7 +339,8 @@
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Data Unused</div> -->
                                 <div class="d-flex-child-50">
                                     <span style="font-size: 8vw; color: #00b8d4; font-weight: bold;">2/3</span>
-                                    <div style="font-size: 1.6vw; text-align: justify;">Data Unused: Two-thirds of company data goes unused due to various
+                                    <div style="font-size: 1.6vw; text-align: justify;">Data Unused: Two-thirds of
+                                        company data goes unused due to various
                                         challenges.</div>
                                 </div>
                             </div>
@@ -352,9 +368,11 @@
                                             <div class="margin-bottom margin-small">
                                                 <h1 data-w-id="c88cbd02-cf69-be1f-b5e2-88f38c6de480"
                                                     style="opacity:0;-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                                                    class="heading-4"><p class="our-workspaces">Our Workspaces:<br></p> For your
+                                                    class="heading-4">
+                                                    <p class="our-workspaces">Our Workspaces:<br></p> For your
                                                     specialized
-                                                    needs</h1>
+                                                    needs
+                                                </h1>
 
                                                 <h3 id="chatbot-heading"></h3>
                                             </div>
@@ -415,7 +433,7 @@
                                         <h2><span class="chatbot-tagline">Get to know our<br>Knowledge
                                                 Database</span><br></h2>
                                     </div>
-                                    <p class="header-subcontent"></p>
+                                    <!-- <p class="header-subcontent"></p> -->
                                 </div>
                                 <div id="w-node-f5813092-fe70-00d7-43ac-4a891a8d54f2-e87d3a51"
                                     class="features-5-content-right">
@@ -466,7 +484,7 @@
                                         </div>
                                         <p><br>We prioritize your data security. Our platform adheres to the highest
                                             privacy standards, ensuring your sensitive information is protected, giving
-                                            you peace of mind while you focus on what matters most.<br>‍</p>
+                                            you peace of mind while you focus on what matters most.<br>‍</p>
                                     </div>
                                 </div>
                             </div>
@@ -546,7 +564,7 @@
                             <div class="w-layout-grid features-component-invoicewhiz">
                                 <div class="invoicewhiz-features-content-left">
                                     <div class="margin-bottom margin-small">
-                                        <h2><span class="invoicewhiz-tagline">Get to know our<br>Invoice</span><br>
+                                        <h2 class="invoicewhiz-tagline">Get to know our<br>Invoice
                                         </h2>
                                     </div>
                                     <p class="header-subcontent"></p>
@@ -718,7 +736,7 @@
             <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100"
                 class="pricing-component w-tabs" id="Pricing">
                 <div>
-                    <span id="why-we">Why We Do This?</span>
+                    <h2 id="why-we">Why We Do This?</h2>
                     <p id="paragraph-3">
 
                         We recognized that most Al solutions are tailored for large
@@ -775,7 +793,7 @@
                                             class="pricing-feature">
                                             <div class="pricing-feature-icon-wrapper"><img width="24" loading="lazy"
                                                     alt="Icon" src="{% static 'images/tick.svg' %}"></div>
-                                            <div>No additional services included
+                                            <div>No additional services included
 
                                             </div>
                                         </div>
@@ -786,7 +804,7 @@
                                 <div class="pricing-plan">
                                     <div class="pricing-content">
                                         <div class="margin-bottom margin-tiny">
-                                            <div class="heading-style-h6">  Business</div>
+                                            <div class="heading-style-h6"> Business</div>
                                         </div>
                                         <div class="text-block-4">For Individual and Professionals</div>
                                         <div class="pricing-divider"></div>
@@ -819,7 +837,7 @@
                                                 class="pricing-feature">
                                                 <div class="pricing-feature-icon-wrapper"><img width="24" loading="lazy"
                                                         alt="Icon" src="{% static 'images/tick.svg' %}"></div>
-                                                <div>1 Super admin + 1 Viewer
+                                                <div>1 Super admin + 1 Viewer
 
                                                 </div>
                                             </div>
@@ -842,7 +860,7 @@
                             <div class="pricing-plan">
                                 <div class="pricing-content">
                                     <div class="margin-bottom margin-tiny">
-                                        <div class="heading-style-h6">  Business +</div>
+                                        <div class="heading-style-h6"> Business +</div>
                                     </div>
                                     <div class="text-block-5">For Larger Teams</div>
                                     <div class="pricing-divider"></div>
@@ -866,7 +884,7 @@
                                             class="pricing-feature">
                                             <div class="pricing-feature-icon-wrapper"><img width="24" loading="lazy"
                                                     alt="Icon" src="{% static 'images/tick.svg' %}"></div>
-                                            <div>1 Super admin + 2 Admin + 2 Viewers
+                                            <div>1 Super admin + 2 Admin + 2 Viewers
 
                                             </div>
                                         </div>
@@ -925,7 +943,7 @@
                                             class="pricing-feature">
                                             <div class="pricing-feature-icon-wrapper"><img width="24" loading="lazy"
                                                     alt="Icon" src="{% static 'images/tick.svg' %}"></div>
-                                            <div>No additional services included</div>
+                                            <div>No additional services included</div>
                                         </div>
                                     </div>
                                 </div>
@@ -1011,7 +1029,7 @@
                                             class="pricing-feature">
                                             <div class="pricing-feature-icon-wrapper"><img width="24" loading="lazy"
                                                     alt="Icon" src="{% static 'images/tick.svg' %}"></div>
-                                            <div>1 Super admin + 2 Admin + 2 Viewers
+                                            <div>1 Super admin + 2 Admin + 2 Viewers
 
                                             </div>
                                         </div>
@@ -1159,7 +1177,7 @@
                                             <p>Intellifind.ai prioritizes data security by adhering to strict
                                                 privacy standards and using encryption protocols to safeguard
                                                 sensitive business information. Your data remains private and fully
-                                                controlled within your workspace.</p>
+                                                controlled within your workspace.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1185,7 +1203,7 @@
         </section>
     </div>
     <hr>
-    <footer class="footer-component">
+    <!-- <footer class="footer-component">
         <div class="padding-global">
             <div class="container-large">
                 <div class="padding-vertical padding-xxlarge">
@@ -1249,7 +1267,7 @@
             </div>
         </div>
         </div>
-    </footer>
+    </footer> -->
     </div>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=670df7ce61868ff9e87d39fc"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
