--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -318,7 +318,7 @@
             <div>
                 <h2 id="why-matter" class="margin-bottom margin-xxlarge">Why Intellifind Matters?</h2>
                 <div class="intellifind-matters"
-                    style="background-color: #131314; color: white; padding: 20px 20px 0; display: flex; font-family: Arial, sans-serif; position: relative; width: 100%; justify-content: space-between; border-bottom: 2px solid #00b8d4;">
+                    style="background-color: #131314; color: white; padding: 20px 20px 0; display: flex; font-family: Arial, sans-serif; position: relative; width: 100%; justify-content: space-between;">
                     <div
                         style="flex: 1; border-right: 2px solid #00b8d4; padding-right: 20px; box-sizing: border-box; margin-left: 2rem;">
                         <div style="display: flex; align-items: center;">
@@ -326,7 +326,7 @@
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Unstructured Data</div> -->
                                 <div class="d-flex-child-50">
                                     <div style="font-size: 8vw; color: #00b8d4; font-weight: bold;">90%</div>
-                                    <div style="font-size: 1.6vw; text-align: justify;">Unstructured Data: Most data is
+                                    <div style="font-size: 1.6vw; text-align: justify;"><span style="font-weight: bold;">Unstructured Data:</span> Most data is
                                         unstructured, making it difficult to
                                         analyze.</div>
                                 </div>
@@ -339,7 +339,7 @@
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Data Unused</div> -->
                                 <div class="d-flex-child-50">
                                     <span style="font-size: 8vw; color: #00b8d4; font-weight: bold;">2/3</span>
-                                    <div style="font-size: 1.6vw; text-align: justify;">Data Unused: Two-thirds of
+                                    <div style="font-size: 1.6vw; text-align: justify;"><span style="font-weight: bold;">Data Unused:</span> Two-thirds of
                                         company data goes unused due to various
                                         challenges.</div>
                                 </div>
@@ -847,12 +847,12 @@
                                                         alt="Icon" src="{% static 'images/tick.svg' %}"></div>
                                                 <div>Team Collaboration</div>
                                             </div>
-                                            <div id="w-node-e1b64202-a359-0f3a-9ceb-01d088e4a9b2-e87d3a51"
+                                            <!-- <div id="w-node-e1b64202-a359-0f3a-9ceb-01d088e4a9b2-e87d3a51"
                                                 class="pricing-feature">
                                                 <div class="pricing-feature-icon-wrapper"><img width="24" loading="lazy"
                                                         alt="Icon" src="{% static 'images/tick.svg' %}"></div>
                                                 <div>Priority Support</div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -1203,72 +1203,50 @@
         </section>
     </div>
     <hr>
-    <!-- <footer class="footer-component">
-        <div class="padding-global">
-            <div class="container-large">
-                <div class="padding-vertical padding-xxlarge">
-
-                    <div class="site-info">
-                        <div class="useful-links">
-
-
-                            <div>
-                                <div class="useful-anchor-links">
-                                    <div class="anchor-heading">Quick Links</div>
-                                    <a href="#home" class="footer-link">Home</a>
-                                    <a href="#features" class="footer-link">Features</a>
-                                    <a href="#Pricing" class="footer-link">Pricing</a>
-                                    <a href="#workspaces" class="footer-link">Workspace</a>
-                                </div>
-
-                            </div>
-
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="footer-newsletter-wrapper">
-
-                        <div class="footer-form-block w-form">
-                            <div class="text-weight-semibold text-size-medium">Join our newsletter</div>
-                            <div>
-                                <form id="email-form" name="email-form" data-name="Email Form" method="post"
-                                    action="{% url 'home' %}" class="footer-form"
-                                    data-wf-page-id="670df7ce61868ff9e87d3a51"
-                                    data-wf-element-id="948a986c-d501-5f5a-a45e-a4b93b5e2b78">
-                                    {% csrf_token %}
-                                    <input class="form-input w-input" maxlength="256" name="email" data-name="Email"
-                                        placeholder="Enter your email" type="email" id="Subscribe-email" required>
-                                    <button type="submit"
-                                        class="get-started is-secondary is-small w-button">Subscribe</button>
-                                </form>
-                            </div>
-                            <div class="text-size-tiny">By subscribing you agree to with our <a href="#"><span
-                                        class="text-span-2"> &nbsp; Privacy
-                                        Policy</span></a>
-                            </div>
-                            {% if message %}
-                            <div class="success-message w-form-done">
-                                <div>{{ message }}</div>
-                            </div>
-                            {% endif %}
-
-                            <div class="error-message w-form-fail">
-                                <div>Oops! Something went wrong while submitting the form.</div>
-                            </div>
-                        </div>
-
-                    </div>
-
+    <footer class="footer-component">
+        <div>
+            <div class="footer-flex">
+                <div class="useful-anchor-links">
+                    <div class="anchor-heading">Quick Links</div>
+                    <a href="#home" class="footer-link">Home</a>
+                    <a href="#features" class="footer-link">Features</a>
+                    <a href="#Pricing" class="footer-link">Pricing</a>
+                    <a href="#workspaces" class="footer-link">Workspace</a>
                 </div>
-
+                <div class="footer-newsletter-wrapper">
+    
+                    <div class="footer-form-block w-form">
+                        <div class="text-weight-semibold text-size-medium">Join our newsletter</div>
+                        <div>
+                            <form id="email-form" name="email-form" data-name="Email Form" method="post"
+                                action="{% url 'home' %}" class="footer-form" data-wf-page-id="670df7ce61868ff9e87d3a51"
+                                data-wf-element-id="948a986c-d501-5f5a-a45e-a4b93b5e2b78">
+                                {% csrf_token %}
+                                <input class="form-input w-input" maxlength="256" name="email" data-name="Email"
+                                    placeholder="Enter your email" type="email" id="Subscribe-email" required>
+                                <button type="submit" class="get-started is-secondary is-small w-button">Subscribe</button>
+                            </form>
+                        </div>
+                        <div class="text-size-tiny">By subscribing you agree to with our <a href="#"><span
+                                    class="text-span-2"> &nbsp; Privacy
+                                    Policy</span></a>
+                        </div>
+                        {% if message %}
+                        <div class="success-message w-form-done">
+                            <div>{{ message }}</div>
+                        </div>
+                        {% endif %}
+    
+                        <div class="error-message w-form-fail">
+                            <div>Oops! Something went wrong while submitting the form.</div>
+                        </div>
+                    </div>
+    
+                </div>
             </div>
         </div>
         </div>
-    </footer> -->
-    </div>
+    </footer>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=670df7ce61868ff9e87d39fc"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
