--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -85,8 +85,8 @@
                                             <a href="#" class="get-started is-small w-button"
                                                 id="header-get-started">Get
                                                 Started</a>
-                                            <a href="#" class="is-small w-button" id="header-get-started">Get
-                                                Started</a>
+                                            <!-- <a href="#" class="is-small w-button" id="header-get-started">Get
+                                                Started</a> -->
                                         </div>
                                 </nav>
                                 <div class="cart-wrapper">
@@ -317,12 +317,11 @@
 
             <div>
                 <h2 id="why-matter" class="margin-bottom margin-xxlarge">Why Intellifind Matters?</h2>
-                <div class="intellifind-matters"
-                    style="background-color: #131314; color: white; padding: 20px 20px 0; display: flex; font-family: Arial, sans-serif; position: relative; width: 100%; justify-content: space-between;">
+                <div class="intellifind-matters">
                     <div
                         style="flex: 1; border-right: 2px solid #00b8d4; padding-right: 20px; box-sizing: border-box; margin-left: 2rem;">
                         <div style="display: flex; align-items: center;">
-                            <div style="margin-left: 15px;">
+                            <div>
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Unstructured Data</div> -->
                                 <div class="d-flex-child-50">
                                     <div style="font-size: 8vw; color: #00b8d4; font-weight: bold;">90%</div>
@@ -336,7 +335,7 @@
                     </div>
                     <div style="flex: 1; padding-left: 20px; box-sizing: border-box; margin-right: 3rem;">
                         <div style="display: flex; align-items: center;">
-                            <div style="margin-left: 15px;">
+                            <div>
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Data Unused</div> -->
                                 <div class="d-flex-child-50">
                                     <span style="font-size: 8vw; color: #00b8d4; font-weight: bold;">2/3</span>
