--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -318,28 +318,27 @@
             <div>
                 <h2 id="why-matter" class="margin-bottom margin-xxlarge">Why Intellifind Matters?</h2>
                 <div class="intellifind-matters">
-                    <div
-                        style="flex: 1; border-right: 2px solid #00b8d4; padding-right: 20px; box-sizing: border-box; margin-left: 2rem;">
+                    <div class="intellifind-matters-unstructured-data">
                         <div style="display: flex; align-items: center;">
                             <div>
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Unstructured Data</div> -->
                                 <div class="d-flex-child-50">
-                                    <div style="font-size: 8vw; color: #00b8d4; font-weight: bold;">90%</div>
-                                    <div style="font-size: 1.6vw; text-align: justify;"><span
-                                            style="font-weight: bold;">Unstructured Data:</span> Most data is
+                                    <div class="intellifind-matters-percent">90%</div>
+                                    <div class="intellifind-matters-data"><span
+                                            style="font-weight: bold;" class="intellifind-matters-data">Unstructured Data:</span> Most data is
                                         unstructured, making it difficult to
                                         analyze.</div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div style="flex: 1; padding-left: 20px; box-sizing: border-box; margin-right: 3rem;">
+                    <div class="intellifind-matters-unused-data">
                         <div style="display: flex; align-items: center;">
                             <div>
                                 <!-- <div style="font-size: 4vw; font-weight: bold; text-align: center;">Data Unused</div> -->
                                 <div class="d-flex-child-50">
-                                    <span style="font-size: 8vw; color: #00b8d4; font-weight: bold;">2/3</span>
-                                    <div style="font-size: 1.6vw; text-align: justify;"><span
+                                    <span class="intellifind-matters-percent">2/3</span>
+                                    <div class="intellifind-matters-data"><span
                                             style="font-weight: bold;">Data Unused:</span> Two-thirds of
                                         company data goes unused due to various
                                         challenges.</div>
@@ -439,7 +438,7 @@
                                 <div id="w-node-f5813092-fe70-00d7-43ac-4a891a8d54f2-e87d3a51"
                                     class="features-5-content-right">
                                     <div class="features-content-item content-item-1">
-                                        <div class="layout-circle_1"></div>
+                                        <div class="layout-circle _1"></div>
                                         <div class="margin-bottom margin-xsmall"><img
                                                 src="{% static 'images/engage.png' %}" loading="lazy" alt="Icon"
                                                 class="icon-1x1-medium"></div>
@@ -573,7 +572,7 @@
                                 <div id="w-node-f5813092-fe70-00d7-43ac-4a891a8d54f2-e87d3a51"
                                     class="chatbot-features-5-content-right">
                                     <div class="features-content-item content-item-1">
-                                        <div class="layout-circle_1"></div>
+                                        <div class="layout-circle _1"></div>
                                         <div class="margin-bottom margin-xsmall"><img
                                                 src="{% static 'images/Eliminate Manual Processing.svg' %}"
                                                 loading="lazy" alt="Icon" class="icon-1x1-medium"></div>
@@ -595,7 +594,7 @@
                                             reporting.</p>
                                     </div>
                                     <div class="features-content-item content-item-1">
-                                        <div class="layout-circle_3"></div>
+                                        <div class="layout-circle _3"></div>
                                         <div class="margin-bottom margin-xsmall"><img
                                                 src="{% static 'images/Multi-Format Acceptance.svg' %}" loading="lazy"
                                                 alt="Icon" class="icon-1x1-medium"></div>
@@ -693,7 +692,7 @@
                                 <div id="w-node-f5813092-fe70-00d7-43ac-4a891a8d54f2-e87d3a51"
                                     class="features-5-content-right">
                                     <div class="features-content-item content-item-1">
-                                        <div class="layout-circle_1"></div>
+                                        <div class="layout-circle _3"></div>
                                         <div class="margin-bottom margin-xsmall"><img
                                                 src="{% static 'images/Real-Time Updates.svg' %}" loading="lazy"
                                                 alt="Icon" class="icon-1x1-medium"></div>
@@ -810,7 +809,7 @@
                                         <div class="text-block-4">For Individual and Professionals</div>
                                         <div class="pricing-divider"></div>
                                         <div class="margin-vertical margin-xxsmall">
-                                            <div class="heading-style-h1 text-color-white-gradient">$15<span
+                                            <div class="heading-style-h1-B">$15<span
                                                     class="heading-style-h4">/mo</span></div>
                                         </div>
                                         <div class="text-align-center">
@@ -866,7 +865,7 @@
                                     <div class="text-block-5">For Larger Teams</div>
                                     <div class="pricing-divider"></div>
                                     <div class="margin-vertical margin-xxsmall">
-                                        <div class="heading-style-h1 text-color-white-gradient">$30<span
+                                        <div class="heading-style-h1-B">$30<span
                                                 class="heading-style-h4">/mo</span></div>
                                     </div>
                                     <div class="text-align-center">
@@ -918,7 +917,7 @@
                                     <div class="margin-vertical margin-xxsmall">
                                         <div class="heading-style-h1">Free</div>
                                     </div>
-                                    <div class="text-weight-medium"><strong>&nbsp;</strong></div>
+                                    <!-- <div class="text-weight-medium"><strong>&nbsp;</strong></div> -->
                                     <div class="text-align-center">
                                         <a href="#" class="get-started max-width-full w-button">Join Waitlist</a>
                                     </div>
