Home page UI fixes based on feedback

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -112,7 +112,7 @@
                                 <div class="header-component">
                                     <div class="header-image-circle"></div>
                                     <div class="margin-bottom margin-xxlarge">
-                                        <div class="text-align-center">
+                                        <div class="text-align-center pl-ifai">
                                             <h1 class="heading-3"><span class="hero-tittle-class">Intellifind.ai</span>
                                             </h1>
                                             <h2 class="header-subtitle">Your Data, Your
@@ -358,7 +358,7 @@
             </section>
 
             <header class="section-video-header background-cell" id="workspaces">
-                <div class="padding-global">
+                <div class="padding-global mt-7rem">
                     <div class="container-large">
                         <div class="padding-section-large">
                             <div class="video-header-component">
@@ -915,7 +915,7 @@
                                     <div class="text-block-5">No Credit Card Required</div>
                                     <div class="pricing-divider"></div>
                                     <div class="margin-vertical margin-xxsmall">
-                                        <div class="heading-style-h1">Free</div>
+                                        <div class="heading-style-h1 heading-style-h1-mb">Free</div>
                                     </div>
                                     <!-- <div class="text-weight-medium"><strong>&nbsp;</strong></div> -->
                                     <div class="text-align-center">
@@ -1060,8 +1060,10 @@
         <header class="section-header background-cell">
             <div data-w-id="b0ffe848-4427-783a-0304-605d94032108" class="cta-circle"></div>
             <div class="padding-global">
-                <div class="text-block-6">Get Intelligent Today. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Get<span>
-                        Intellifind.ai!</span></div>
+                <!-- <div class="text-block-6">Get Intelligent Today. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Get<span>
+                        Intellifind.ai!</span></div> -->
+                <div class="text-block-6">Get Intelligent.<span>
+                    Get Intellifind</span> Today!</div>
                 <div class="container-small">
                     <div class="padding-section-large">
                         <div class="cta-content slide-in-0-6s">
