--- a/home/static/css/intellifind-ai.css
+++ b/home/static/css/intellifind-ai.css
@@ -1377,7 +1377,7 @@ figcaption {
 
 .heading-style-h1-B {
   color: var(--white);
-  font-size: 4rem;
+  font-size: 3rem;
   line-height: 1.2;
   text-align: center;
 }
@@ -1426,7 +1426,7 @@ figcaption {
 }
 
 .get-started {
-  border: 1.5px solid var(--border);
+  /* border: 1.5px solid var(--border); */
   background-color: var(--gradient-3);
   color: var(--white);
   text-align: center;
@@ -1551,7 +1551,7 @@ figcaption {
 }
 
 .form-input {
-  border: 1px solid var(--border);
+  border: 1px solid #fff;
   border-radius: var(--border-radius-small-3);
   background-color: var(--background-secondary);
   color: var(--paragraph);
@@ -2512,7 +2512,7 @@ figcaption {
 }
 
 .pricing-tabs-menu {
-  border: 1px solid var(--border);
+  /* border: 1px solid var(--border); */
   border-radius: var(--border-radius-small-3);
   background-color: var(--background-tertiary);
   align-self: center;
@@ -3880,7 +3880,7 @@ figcaption {
 
 .cta-circle {
   z-index: 999;
-  background-color: var(--gradient-3);
+  /* background-color: var(--gradient-3); */
   filter: blur(150px);
   border-radius: 50%;
   width: 70%;
@@ -4150,7 +4150,7 @@ figcaption {
 }
 
 .header-image-circle {
-  background-color: var(--gradient-3);
+  /* background-color: var(--gradient-3); */
   filter: blur(80px);
   border-radius: 50%;
   width: 60%;
@@ -5103,9 +5103,10 @@ figcaption {
   color: transparent;
   margin-bottom: 10px;
   font-family: "Lato";
-  font-weight: 900;
-  background-image: linear-gradient(186deg, #2eeddd 41%, #156cbb 100%, #156cbb);
-  background-clip: text;
+  /* font-weight: 900; */
+  /* background-image: linear-gradient(186deg, #2eeddd 41%, #156cbb 100%, #156cbb); */
+  /* background-clip: text; */
+  color: #fff;
 }
 
 .card p {
@@ -5116,7 +5117,8 @@ figcaption {
 }
 
 .card:hover {
-  background-image: linear-gradient(#1a1a1a 69%, #0a5b75);
+  /* background-image: linear-gradient(#1a1a1a 69%, #0a5b75); */
+  background-image: linear-gradient(rgba(26, 26, 26, 0.6) 69%, rgba(10, 90, 117, 0.6));
   transform: scale(0.95);
   box-shadow: 5px -10px 9px -3px #0003;
 }
@@ -5476,7 +5478,10 @@ h1.heading-4 span {
 
 .intellifind-matters-percent {
   font-size: 8vw;
-  color: #00b8d4;
+  -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(186deg, #2eeddd 41%, #156cbb 100%, #156cbb);
+    -webkit-background-clip: text;
+    background-clip: text;
   font-weight: bold;
 }
 
@@ -5486,6 +5491,40 @@ h1.heading-4 span {
 }
 
 /* responsive quries for 480px, 576px, 767px, 991px, 1200px screen sizes  */
+@media screen and (min-width: 1200px) {
+  .pl-ifai {
+    padding-left: 60px;
+  }
+  #paragraph-3 {
+    text-align: center;
+  }
+  .heading-style-h1,
+  .heading-style-h1-B {
+    font-size: 3rem;
+  }
+
+  .heading-style-h1-mb {
+    margin-bottom: 33px;
+  }
+
+  .text-block-6 {
+    margin-bottom: 0;
+  }
+  .cta-circle {
+    background-color: initial;
+  }
+  #paragraph-1 {
+    margin-bottom: 5rem;
+  }
+  .tagline {
+    margin-top: 12rem;
+  }
+  .mt-7rem {
+    margin-top: 7rem;
+  }
+}
+
+
 @media screen and (max-width: 1200px) {
   h1.heading-4 span {
     font-size: 4rem;
@@ -6031,6 +6070,15 @@ h1.heading-4 span {
   #w-node-_948a986c-d501-5f5a-a45e-a4b93b5e2b8a-3b5e2b6d {
     grid-area: 1 / 1 / 2 / 4;
   }
+  .navbar-menu-right {
+    text-align: left;
+  }
+  .dropdown {
+    display: block;
+  }
+  .navbar-menu-right {
+    padding-left: 0.75rem;
+  }
 }
 
 @media screen and (min-width: 991px) {
@@ -6258,6 +6306,7 @@ h1.heading-4 span {
 
   .navbar-menu {
     padding-bottom: 6rem;
+    background-color: #1a1a1a;
   }
 
   .navbar-dropdown-content-layout {
@@ -6812,7 +6861,7 @@ h1.heading-4 span {
   }
 
   .get-started.is-secondary {
-    border: 1.5px solid var(--gradient-3);
+    /* border: 1.5px solid var(--gradient-3); */
     color: var(--white);
     background-color: #0000;
     background-image: none;
@@ -6821,7 +6870,7 @@ h1.heading-4 span {
   }
 
   .get-started {
-    border: 1.5px solid var(--border);
+    /* border: 1.5px solid var(--border); */
     background-color: var(--gradient-3);
     color: var(--white);
     text-align: center;
@@ -6895,15 +6944,15 @@ h1.heading-4 span {
   .features-content-item.content-item-2 {
     border-style: none;
     border-width: 0;
-    height: 11rem;
-    width: 90%;
+    height: 20rem;
+    width: 100%;
     top: 32%;
   }
 
   .features-content-item.content-item-1 {
     border-width: 0;
     height: 20rem;
-    width: 90%;
+    width: 100%;
     display: inline-block;
     top: 12%;
   }
@@ -6933,7 +6982,7 @@ h1.heading-4 span {
     border-style: none;
     border-width: 0;
     height: auto;
-    width: 85%;
+    width: 100%;
     top: 32%;
   }
 
@@ -7118,7 +7167,7 @@ h1.heading-4 span {
   margin-top: 0;
 }
 .invoicewhiz-tagline {
-  left: 20%;
+  left: 50%;
 }
 .pricing-component {
   margin-top: 0;
@@ -7126,6 +7175,7 @@ h1.heading-4 span {
 #paragraph-1 {
   font-size: 1rem !important;
   text-align: justify;
+  margin-bottom: 6rem;
 }
 #paragraph-3 {
   font-size: 1rem;
